# PokerSource

./: Makefile  Makefile.am  Makefile.in  README  UpgradeLog.htm  config.status  configure  configure.ac  libtool  mktab_astud.vcxproj  mktab_astud.vcxproj.filters  mktab_basic.vcxproj  mktab_basic.vcxproj.filters  mktab_evx.vcxproj  mktab_evx.vcxproj.filters  mktab_joker.vcxproj  mktab_joker.vcxproj.filters  mktab_lowball.vcxproj  mktab_lowball.vcxproj.filters  mktab_packed.vcxproj  mktab_packed.vcxproj.filters  poker-eval.pc  poker-eval.sln  poker-eval.spec  poker-eval.vcxproj  poker-eval.vcxproj.filters
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
examples/: .makefile.swo  .makefile.swp  Makefile  Makefile.in  eval  eval.vcxproj  fish  fish.vcxproj  five_card_hands  five_card_hands.vcxproj  hcmp2  hcmp2.vcxproj  hcmpn  hcmpn2.vcxproj  pokenum  pokenum.vcxproj  seven_card_hands  seven_card_hands.vcxproj  usedecks  usedecks.vcxproj
include/: Makefile  Makefile.in  config.h  deck_std.h
lib/: Makefile  Makefile.in  evx_gen5  evx_gen7  libpoker-eval.la  libpoker_eval_la-combinations.lo  libpoker_eval_la-deck.lo  libpoker_eval_la-deck_astud.lo  libpoker_eval_la-deck_joker.lo  libpoker_eval_la-deck_std.lo  libpoker_eval_la-enumerate.lo  libpoker_eval_la-enumord.lo  libpoker_eval_la-evx.lo  libpoker_eval_la-lowball.lo  mktab_astud  (+29 more)
project/: Makefile  Makefile.am  Makefile.in  converter.txt  hvh  hvh.c  hvhCalc.c  test.c
project/.deps/: hvh-hvh.Po  hvh-hvhCalc.Po  hvh.Po  test-test.Po  test.Po
(+55 files in other folders)
